# rust-api

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIDDLEWARE_EXPLORATION.md  README.md
examples/error-handlers/: Cargo.toml
examples/error-handlers/src/: main.rs
examples/extensions-demo/: Cargo.toml
examples/extensions-demo/src/: main.rs
examples/file-serving/: Cargo.toml
examples/file-serving/src/: main.rs
examples/file-serving/static/: index.html
examples/form-handling/: Cargo.toml
examples/form-handling/src/: main.rs
examples/streaming-demo/: Cargo.toml
examples/streaming-demo/src/: main.rs
examples/websocket-echo/: Cargo.toml
examples/websocket-echo/src/: main.rs
rust-api-middleware/: .gitignore
rust-api-middleware/client/: CHANGELOG.md
rust-api-middleware/cors/: CHANGELOG.md
rust-api-middleware/error-handlers/: CHANGELOG.md
rust-api-middleware/helpers/: CHANGELOG.md
rust-api-middleware/helpers/src/: lib.rs
src/: api.rs  error.rs  error_handler.rs  extensions.rs  into_res.rs  lib.rs  main.rs  middleware.rs  req.rs  res.rs  route.rs  router.rs
