[workspace]
members = [
    ".",
    "examples/hello-world",
    "examples/state-management",
    "examples/nested-routing",
    "examples/form-handling",
]
resolver = "2"

[package]
name = "rust-api"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Fast and scalable web framework for Rust"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
homepage = "https://github.com/erickweyunga/rust-api"
documentation = "https://docs.rs/rust-api"
keywords = ["web", "framework", "async", "rust", "http"]
categories = ["web-programming", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Routing
matchit = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
bytes = "1"
async-trait = "0.1"
form_urlencoded = "1"

[dev-dependencies]
anyhow = "1"
