[workspace]
members = [
    "."
]
resolver = "2"

[package]
name = "rust-api"
version = "0.0.5"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Fast and scalable web framework for Rust"
license = "MIT"
repository = "https://github.com/erickweyunga/rust-api"
homepage = "https://github.com/erickweyunga/rust-api"
documentation = "https://docs.rs/rust-api"
keywords = ["web", "framework", "async", "rust", "http"]
categories = ["web-programming", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"
exclude = [
    "examples/*",
    "plan/*",
    "target/*",
    ".git/*",
    ".gitignore",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Routing
matchit = "0.9"

# Extractors and JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Utilities
bytes = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
paste = "1"

[dev-dependencies]
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
