[workspace]
members = [
    "."
, "examples/streaming-demo", "examples/websocket-echo", "examples/file-serving"]
resolver = "2"

[package]
name = "foton"
version = "0.0.5"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Fast, minimal, Rust-native web framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/erickweyunga/foton"
homepage = "https://github.com/erickweyunga/foton"
documentation = "https://docs.rs/foton"
keywords = ["web", "framework", "async", "foton", "http"]
categories = ["web-programming", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"
exclude = [
    "examples/*",
    "plan/*",
    "target/*",
    ".git/*",
    ".gitignore",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Routing
matchit = "0.9"

# Extractors and JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
toml = "0.8"

# Utilities
bytes = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
paste = "1"
futures-util = "0.3"

# WebSocket support (optional)
sha1 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = []
websocket = ["sha1", "base64"]

[dev-dependencies]
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
